fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
 /* Estilo do Navbar fixo no topo */
